alignment issues

--- a/styles.css
+++ b/styles.css
@@ -164,11 +164,14 @@ h4 {
 }
 .site-nav {
   margin: 0 20px;
+  padding: 0 20px 20px 20px;
 }
 .site-nav h1 {
   grid-column: 1/4;
   grid-row: 1;
-  /* padding-bottom: 10px; */
+  padding-bottom: 0.25em;
+  padding-left: 0;
+  /* margin-bottom: 1em; */
   border-bottom: 2px solid var(--primary);
   display: inline-block;
 }
